# soft_renderer

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
lesson-0/: CMakeLists.txt  Main.cpp
lesson-1/: CMakeLists.txt  Main.cpp
lesson-1/doc/: Lesson_1_Bresenham画线算法.docx
lesson-2/: CMakeLists.txt  Main.cpp
lesson-2/doc/: Lesson_2_三角形光栅化和背面剔除.docx
lesson-3/: CMakeLists.txt  Main.cpp
lesson-3/doc/: Lesson_3_移除隐藏面ZBuffer.docx
lesson-4-5/: CMakeLists.txt  Main.cpp
lesson-4-5/doc/: Lesson_4_5透视投影和移动视角.docx
lesson-6/: CMakeLists.txt  IOurGL.cpp  IOurGL.h  Main.cpp  Shader.cpp  Shader.h
lesson-7/: BasePassShader.cpp  BasePassShader.h  CMakeLists.txt  DepthBufferShader.cpp  DepthBufferShader.h  IOurGL.cpp  IOurGL.h  Main.cpp
lesson-tmp/: CMakeLists.txt
mine-test/: CMakeLists.txt  Main.cpp
